--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://scratch.mit.edu/projects/616033324/embed" allowtransparency="true" width="100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe style="width: 100%; height: 100%" src="https://scratch.mit.edu/projects/616033324/embed" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
